--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -1,75 +1,95 @@
-<taglib name="app\portal\taglib\Portal"/>
-<include file="public@function"/>
+<taglib name="app\portal\taglib\Portal" />
+<include file="public@function" />
 <meta name="author" content="ThinkCMF">
 <html>
+
 <head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8">
-	<meta name="format-detection" content="telephone=no">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-	<meta name="renderer" content="webkit">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="screen-orientation" content="portrait">
-	<meta name="x5-orientation" content="portrait">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
-	<title>官网-华劳集团股份有限公司</title>
-	<meta name="keywords" content="华劳集团股份有限公司,政务招聘服务,政务编外派遣服务,政务外包服务,人才招聘服务,劳务派遣服务,岗位/产线外包服务,灵活用工服务,建筑工程劳务分包,机电安装劳务分包,雇工伞,高管福利,员工关怀计划,建工宝,客房清洁HCO,公共区域保洁,PA 保洁,保洁岗位外包">
-	<meta name="description" content="华劳集团股份有限公司创始于2007年，是中国人力资源服务行业的先行者，旗下运营主体有华劳人力资源、金伞保险代理、中政服务外包、中劳建筑劳务分包、中洁清洁、中朗安服六大事业集群，是一家致力于人力资源全产业链管理与开发的综合性商业服务集团。">
-	<meta http-equiv="Cache-Control" content="no-transform">
-	<meta http-equiv="Cache-Control" content="no-siteapp">
-	<meta http-equiv="Pragma" content="no-cache">
-	<meta http-equiv="Cache-Control" content="no-cache">
-	<meta http-equiv="Expires" content="0">
-	<script src="__TMPL__/public/assets/style/js/flexible.js"></script>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="screen-orientation" content="portrait">
+    <meta name="x5-orientation" content="portrait">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+    <title>官网-华劳集团股份有限公司</title>
+    <meta name="keywords" content="华劳集团股份有限公司,政务招聘服务,政务编外派遣服务,政务外包服务,人才招聘服务,劳务派遣服务,岗位/产线外包服务,灵活用工服务,建筑工程劳务分包,机电安装劳务分包,雇工伞,高管福利,员工关怀计划,建工宝,客房清洁HCO,公共区域保洁,PA 保洁,保洁岗位外包">
+    <meta name="description" content="华劳集团股份有限公司创始于2007年，是中国人力资源服务行业的先行者，旗下运营主体有华劳人力资源、金伞保险代理、中政服务外包、中劳建筑劳务分包、中洁清洁、中朗安服六大事业集群，是一家致力于人力资源全产业链管理与开发的综合性商业服务集团。">
+    <meta http-equiv="Cache-Control" content="no-transform">
+    <meta http-equiv="Cache-Control" content="no-siteapp">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-Control" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <meta name="theme-color" content="#ff5000">
+    <script src="__TMPL__/public/assets/style/js/flexible.js"></script>
     <link href="__TMPL__/public/assets/style/css/bootstrap.min.3.3.7.css" rel="stylesheet">
-	<link href="__TMPL__/public/assets/style/css/slick.css" rel="stylesheet">
-	<link href="__TMPL__/public/assets/style/css/slick-theme.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="__TMPL__/public/assets/style/css/reset.css?v=0.01">
+    <link href="__TMPL__/public/assets/style/css/slick.css" rel="stylesheet">
+    <link href="__TMPL__/public/assets/style/css/slick-theme.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="__TMPL__/public/assets/style/css/reset.css?v=0.01">
     <link rel="stylesheet" type="text/css" href="__TMPL__/public/assets/style/css/common.css?v=0.01">
     <link rel="stylesheet" type="text/css" href="__TMPL__/public/assets/style/css/index.css?v=0.01">
-	<link href="__TMPL__/public/assets/style/font/iconfont.css" rel="stylesheet">
+    <link href="__TMPL__/public/assets/style/font/iconfont.css" rel="stylesheet">
     <link rel="shortcut icon" href="__TMPL__/public/assets/style/imgs/favicon.ico">
     <!-- <link href="__TMPL__/public/assets/style/css/contact.css" rel="stylesheet"> -->
     <link href="__TMPL__/public/assets/style/css/solution.css" rel="stylesheet">
-	<link href="__TMPL__/public/assets/style/css/product.css" rel="stylesheet">
+    <link href="__TMPL__/public/assets/style/css/product.css" rel="stylesheet">
     <link href="__TMPL__/public/assets/style/css/map.css" rel="stylesheet">
     <link href="__TMPL__/public/assets/style/css/news.css" rel="stylesheet">
-	<script src="__TMPL__/public/assets/style/js/jquery.min.js"></script>
-	<script src="__TMPL__/public/assets/style/js/slick.min.js"></script>
-	<script src="__TMPL__/public/assets/style/font/iconfont.js"></script>
-	<script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.4&key=390f8d3e5942f5160a994c1916cae4b1"></script>
-	
+    <script src="__TMPL__/public/assets/style/js/jquery.min.js"></script>
+    <script src="__TMPL__/public/assets/style/js/slick.min.js"></script>
+    <script src="__TMPL__/public/assets/style/font/iconfont.js"></script>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.4&key=390f8d3e5942f5160a994c1916cae4b1"></script>
+
 </head>
 
 <body>
-<!--头部公用-start-->
-<div class="navbar nav-header hidden-xs header">
-    <div class="header-box">
-		<div class="flex-around">
-			<div class="">
-				<a href="javascript:void(0)" class="img-logo"></a>
-			</div>
-			<div>
-				<ul class="nav navbar-nav">
-				    <li data-url = "index"><p><a href="{:cmf_url('portal/Index/index')}" title="首页">首页</a></p></li>
-					<li data-url = "product"><p><a href="{:cmf_url('portal/Product/index')}" title="产品服务">产品服务</a></p></li>
-				    <li data-url = "solution"><p><a href="{:cmf_url('portal/Solution/index')}" title="解决方案">解决方案</a></p></li>
-				    <li data-url = "news"><p><a href="{:cmf_url('portal/News/index')}" title="新闻中心">新闻咨询</a></p></li>
-					<li data-url = "partner"><p><a href="{:cmf_url('portal/Partner/index')}" title="合伙人计划">合伙人计划</a></p></li>
-				    <li data-url = "about"><p><a href="{:cmf_url('portal/About/index')}" title="关于我们">关于我们</a></p></li>
-				    <li data-url = "contacts"><p><a href="{:cmf_url('portal/Contacts/index')}" title="联系我们">联系我们</a></p></li>
-				    <li data-url = "customer"><p><a href="{:cmf_url('portal/Customer/index')}" title="合作客户">合作客户</a></p></li>
-				    <li data-url = "application"><p><a href="{:cmf_url('portal/Application/index')}" title="企业应用">企业应用</a></p></li>
-				</ul>
-			</div>
-			<div class="header-icon-imgs">
-				<img src="__TMPL__/public/assets/style/imgs/index/language.svg">
-				<span style="color: #fff;padding: 0 10px;">|</span>
-				<img src="__TMPL__/public/assets/style/imgs/index/search.svg">
-			</div>
-			<div class="num-phone">400-8718711</div>
-		</div>
-        <!-- <div class="row">
+    <!--头部公用-start-->
+    <div class="navbar nav-header hidden-xs header">
+        <div class="header-box">
+            <div class="flex-around">
+                <div class="">
+                    <a href="javascript:void(0)" class="img-logo"></a>
+                </div>
+                <div>
+                    <ul class="nav navbar-nav">
+                        <li data-url="index">
+                            <p><a href="{:cmf_url('portal/Index/index')}" title="首页">首页</a></p>
+                        </li>
+                        <li data-url="product">
+                            <p><a href="{:cmf_url('portal/Product/index')}" title="产品服务">产品服务</a></p>
+                        </li>
+                        <li data-url="solution">
+                            <p><a href="{:cmf_url('portal/Solution/index')}" title="解决方案">解决方案</a></p>
+                        </li>
+                        <li data-url="news">
+                            <p><a href="{:cmf_url('portal/News/index')}" title="新闻中心">新闻咨询</a></p>
+                        </li>
+                        <li data-url="partner">
+                            <p><a href="{:cmf_url('portal/Partner/index')}" title="合伙人计划">合伙人计划</a></p>
+                        </li>
+                        <li data-url="about">
+                            <p><a href="{:cmf_url('portal/About/index')}" title="关于我们">关于我们</a></p>
+                        </li>
+                        <li data-url="contacts">
+                            <p><a href="{:cmf_url('portal/Contacts/index')}" title="联系我们">联系我们</a></p>
+                        </li>
+                        <li data-url="customer">
+                            <p><a href="{:cmf_url('portal/Customer/index')}" title="合作客户">合作客户</a></p>
+                        </li>
+                        <li data-url="application">
+                            <p><a href="{:cmf_url('portal/Application/index')}" title="企业应用">企业应用</a></p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="header-icon-imgs">
+                    <img src="__TMPL__/public/assets/style/imgs/index/language.svg">
+                    <span style="color: #fff;padding: 0 10px;">|</span>
+                    <img src="__TMPL__/public/assets/style/imgs/index/search.svg">
+                </div>
+                <div class="num-phone">400-8718711</div>
+            </div>
+            <!-- <div class="row">
             <div class="col-lg-2 col-md-2 col-sm-2">
             	<a href="javascript:void(0)" class="img-logo"></a>
             </div>
@@ -78,118 +98,118 @@
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 num-phone">186 0111 8711</div>
         </div> -->
+        </div>
     </div>
-</div>
 
-<div class="navbar navbar-default hidden-sm hidden-md hidden-lg xmHeader" role="navigation" id="xmHeader">
-    <div class="navbar-header header" id="header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-            <span class="sr-only">切换导航</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand img-logo" href="javascript:void(0)"></a>
+    <div class="navbar navbar-default hidden-sm hidden-md hidden-lg xmHeader" role="navigation" id="xmHeader">
+        <div class="navbar-header header" id="header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                <span class="sr-only">切换导航</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand img-logo" href="javascript:void(0)"></a>
+        </div>
+        <div class="collapse navbar-collapse navbar-inverse navbar-fixed-top" id="navbar-collapse">
+            <ul class="menu-splitL">
+                <li class="menu-splitL-li border-1px-rgba animate">
+                    <a href="{:cmf_url('portal/Index/index')}" class="menu-splitL-item" title="首页">首页</a>
+                </li>
+                <li class="menu-splitL-li border-1px-rgba animate">
+                    <a href="{:cmf_url('portal/Product/index')}" class="menu-splitL-item" title="产品服务">产品服务</a>
+                </li>
+                <li class="menu-splitL-li border-1px-rgba animate">
+                    <a href="{:cmf_url('portal/Solution/index')}" class="menu-splitL-item" title="解决方案">解决方案</a>
+                </li>
+                <li class="menu-splitL-li border-1px-rgba animate">
+                    <a href="{:cmf_url('portal/News/index')}" class="menu-splitL-item" title="新闻咨询">新闻咨询</a>
+                </li>
+                <li class="menu-splitL-li border-1px-rgba animate">
+                    <a href="{:cmf_url('portal/Partner/index')}" class="menu-splitL-item" title="合伙人计划">合伙人计划</a>
+                </li>
+                <li class="menu-splitL-li border-1px-rgba animate">
+                    <a href="{:cmf_url('portal/About/index')}" class="menu-splitL-item" title="关于我们">关于我们</a>
+                </li>
+                <li class="menu-splitL-li border-1px-rgba animate">
+                    <a href="{:cmf_url('portal/Contacts/index')}" class="menu-splitL-item" title="联系我们">联系我们</a>
+                </li>
+                <li class="menu-splitL-li border-1px-rgba animate">
+                    <a href="{:cmf_url('portal/Customer/index')}" class="menu-splitL-item" title="合作客户">合作客户</a>
+                </li>
+                <li class="menu-splitL-li border-1px-rgba animate">
+                    <a href="{:cmf_url('portal/Application/index')}" class="menu-splitL-item" title="企业应用">企业应用</a>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div class="collapse navbar-collapse navbar-inverse navbar-fixed-top" id="navbar-collapse">
-		<ul class="menu-splitL">
-			<li class="menu-splitL-li border-1px-rgba animate">
-				<a href="{:cmf_url('portal/Index/index')}" class="menu-splitL-item" title="首页">首页</a>
-			</li>
-			<li class="menu-splitL-li border-1px-rgba animate">
-				<a href="{:cmf_url('portal/Product/index')}" class="menu-splitL-item" title="产品服务">产品服务</a>
-			</li>
-			<li class="menu-splitL-li border-1px-rgba animate">
-				<a href="{:cmf_url('portal/Solution/index')}" class="menu-splitL-item" title="解决方案">解决方案</a>
-			</li>
-			<li class="menu-splitL-li border-1px-rgba animate">
-				<a href="{:cmf_url('portal/News/index')}" class="menu-splitL-item" title="新闻咨询">新闻咨询</a>
-			</li>
-			<li class="menu-splitL-li border-1px-rgba animate">
-				<a href="{:cmf_url('portal/Partner/index')}" class="menu-splitL-item" title="合伙人计划">合伙人计划</a>
-			</li>
-			<li class="menu-splitL-li border-1px-rgba animate">
-				<a href="{:cmf_url('portal/About/index')}" class="menu-splitL-item" title="关于我们">关于我们</a>
-			</li>
-			<li class="menu-splitL-li border-1px-rgba animate">
-				<a href="{:cmf_url('portal/Contacts/index')}" class="menu-splitL-item" title="联系我们">联系我们</a>
-			</li>
-			<li class="menu-splitL-li border-1px-rgba animate">
-				<a href="{:cmf_url('portal/Customer/index')}" class="menu-splitL-item" title="合作客户">合作客户</a>
-			</li>
-			<li class="menu-splitL-li border-1px-rgba animate">
-				<a href="{:cmf_url('portal/Application/index')}" class="menu-splitL-item" title="企业应用">企业应用</a>
-			</li>
-		</ul>
-    </div>
-</div>
 </body>
 <script type="text/javascript">
-	$(function(){
-		activeNav();
-		$('.header-box li').mouseover(function(){
-			$('.header-box li').removeClass('active');
-			$(this).addClass('active');
-		});
-		
-		$('.nav-item-title li').mouseover(function(){
-			$('.nav-item-title li').removeClass('title-active');
-			$(this).addClass('title-active');
-			var n = $(this).index();
-			$('.nav-item-text .nav-item-text-list').removeClass('text-active');
-			$('.nav-item-text .nav-item-text-list').eq(n).addClass('text-active');
-		});
-		$(".nav-item-text .nav-item-text-list li").mouseover(function(){
-			$('.nav-item-text li.nav-item-text-list li').removeClass('col');
-			$(this).addClass('col');
-		});
-		$('.header-box').mouseout(function(){
-			activeNav();
-		});
-		function activeNav(){
-			$('.header-box li').removeClass('active');
-			var location = window.location.pathname;
-			var arr = location.split("/");
-			if(location == '/'){
-				$('.header-box li').eq(0).addClass('active');
-			}else if(arr[2] === "service"){
-				$('.header-box li').eq(1).addClass('active');	
-			}else{
-				for(var i = 0;i<$('.header-box li').length;i++){
-					if($('.header-box li').eq(i).data('url')==arr[2]){
-						$('.header-box li').eq(i).addClass('active');
-						return true
-					}
-				}
-			}
-			
-		};
-		$(".menu-splitL-li").click(function(){
-			$(this).next().toggle();
-			$(this).children(".menu-icon").toggleClass("menu-icon-route");
-		});
-		$(".menu-product-ul-li").click(function(){
-			$(this).next().toggle();
-			$(this).children(".menu-icon").toggleClass("menu-icon-route");
-		});
-		//头部固定
-		// $(window).scroll(function() {
-		//     var scrollTop = document.documentElement.scrollTop || window.pageYOffset || document.body.scrollTop;
-		//     if(scrollTop > 50) {
-		//         $('.header').addClass('header-fixed-box');
-		//     } else {
-		//         $('.header').removeClass('header-fixed-box');
-		//     }
-		// });
-		
-		// $(window).scroll(function () {
-		//     if ($(window).scrollTop() >= 30) {
-		//         $("#xmHeader").addClass("header-fixed-box");
-		//     } else {
-		//         $("#xmHeader").removeClass("header-fixed-box");
-		//     }
-		// });
-	})
-</script>
-</html>
+    $(function () {
+        activeNav();
+        $('.header-box li').mouseover(function () {
+            $('.header-box li').removeClass('active');
+            $(this).addClass('active');
+        });
 
+        $('.nav-item-title li').mouseover(function () {
+            $('.nav-item-title li').removeClass('title-active');
+            $(this).addClass('title-active');
+            var n = $(this).index();
+            $('.nav-item-text .nav-item-text-list').removeClass('text-active');
+            $('.nav-item-text .nav-item-text-list').eq(n).addClass('text-active');
+        });
+        $(".nav-item-text .nav-item-text-list li").mouseover(function () {
+            $('.nav-item-text li.nav-item-text-list li').removeClass('col');
+            $(this).addClass('col');
+        });
+        $('.header-box').mouseout(function () {
+            activeNav();
+        });
+        function activeNav() {
+            $('.header-box li').removeClass('active');
+            var location = window.location.pathname;
+            var arr = location.split("/");
+            if (location == '/') {
+                $('.header-box li').eq(0).addClass('active');
+            } else if (arr[2] === "service") {
+                $('.header-box li').eq(1).addClass('active');
+            } else {
+                for (var i = 0; i < $('.header-box li').length; i++) {
+                    if ($('.header-box li').eq(i).data('url') == arr[2]) {
+                        $('.header-box li').eq(i).addClass('active');
+                        return true
+                    }
+                }
+            }
+
+        };
+        $(".menu-splitL-li").click(function () {
+            $(this).next().toggle();
+            $(this).children(".menu-icon").toggleClass("menu-icon-route");
+        });
+        $(".menu-product-ul-li").click(function () {
+            $(this).next().toggle();
+            $(this).children(".menu-icon").toggleClass("menu-icon-route");
+        });
+        //头部固定
+        // $(window).scroll(function() {
+        //     var scrollTop = document.documentElement.scrollTop || window.pageYOffset || document.body.scrollTop;
+        //     if(scrollTop > 50) {
+        //         $('.header').addClass('header-fixed-box');
+        //     } else {
+        //         $('.header').removeClass('header-fixed-box');
+        //     }
+        // });
+
+        // $(window).scroll(function () {
+        //     if ($(window).scrollTop() >= 30) {
+        //         $("#xmHeader").addClass("header-fixed-box");
+        //     } else {
+        //         $("#xmHeader").removeClass("header-fixed-box");
+        //     }
+        // });
+    })
+</script>
+
+</html>
