--- a/public/themes/simpleboot3/portal/contact.html
+++ b/public/themes/simpleboot3/portal/contact.html
@@ -116,9 +116,9 @@
 								</li>
 							</ul> -->
 						</div>
-						<div class="contact-part-box-right  hidden-xs">
+					<!-- 	<div class="contact-part-box-right  hidden-xs">
 							<div class="map" id="map2"></div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 				
@@ -171,22 +171,22 @@
 				map.setCenter(position); 
 				map.add(marker);
 			})
-			let position2 = [116.365035, 37.434357];
-			var marker2 = new AMap.Marker({
-			    icon:new AMap.Icon({
-					 image: iconImg,
-					 size: new AMap.Size(32, 38),  //图标所处区域大小
-					 imageSize: new AMap.Size(32,38) //图标大小
-				}), 
-			    position: position,
-			    anchor:'bottom-center'
-			});
-			var mapTwo = new AMap.Map('map2', {
-			  zoom: 18, //初始地图级别
-			  center: [116.365035, 37.434357], //初始地图中心点
-			});
+			// let position2 = [116.365035, 37.434357];
+			// var marker2 = new AMap.Marker({
+			//     icon:new AMap.Icon({
+			// 		 image: iconImg,
+			// 		 size: new AMap.Size(32, 38),  //图标所处区域大小
+			// 		 imageSize: new AMap.Size(32,38) //图标大小
+			// 	}), 
+			//     position: position,
+			//     anchor:'bottom-center'
+			// });
+			// var mapTwo = new AMap.Map('map2', {
+			//   zoom: 18, //初始地图级别
+			//   center: [116.365035, 37.434357], //初始地图中心点
+			// });
 			
-			mapTwo.add(marker2);
+			// mapTwo.add(marker2);
 			
 			function getTabs(){
 				$.ajax({
@@ -283,29 +283,29 @@
 									html += '</li>';
 									$("#companyList").html(html);
 									$("#companyList ul li").eq(0).addClass("active");
-									if(marker2){
-										mapTwo.remove(marker2);
-									}
-									let lng =$("#companyList ul li").eq(0).attr("data-lng");
-									let lat = $("#companyList ul li").eq(0).attr("data-lat");
-									position2[0] = lng;
-									position2[1] = lat;
-									marker2 = new AMap.Marker({
-									    icon:new AMap.Icon({
-											 image: iconImg,
-											 size: new AMap.Size(32, 38),  //图标所处区域大小
-											 imageSize: new AMap.Size(32, 38) //图标大小
-										}), 
-									    position: position2,
-									    anchor:'bottom-center'
-									});
-									mapTwo.setCenter(position2); 
-									mapTwo.add(marker2);
+									// if(marker2){
+									// 	mapTwo.remove(marker2);
+									// }
+									// let lng =$("#companyList ul li").eq(0).attr("data-lng");
+									// let lat = $("#companyList ul li").eq(0).attr("data-lat");
+									// position2[0] = lng;
+									// position2[1] = lat;
+									// marker2 = new AMap.Marker({
+									//     icon:new AMap.Icon({
+									// 		 image: iconImg,
+									// 		 size: new AMap.Size(32, 38),  //图标所处区域大小
+									// 		 imageSize: new AMap.Size(32, 38) //图标大小
+									// 	}), 
+									//     position: position2,
+									//     anchor:'bottom-center'
+									// });
+									// mapTwo.setCenter(position2); 
+									// mapTwo.add(marker2);
 								}else{
 									$("#companyList").html('');
-									if(marker2){
-										mapTwo.remove(marker2);
-									}
+									// if(marker2){
+									// 	mapTwo.remove(marker2);
+									// }
 								}
 							}
 						},
@@ -319,24 +319,24 @@
 			$("#companyList").on("click","li",function(){
 				$("#companyList ul li").removeClass("active");
 				$(this).addClass("active");
-				if(marker2){
-					mapTwo.remove(marker2);
-				}
-				let lng = $(this).attr("data-lng");
-				let lat = $(this).attr("data-lat");
-				position2[0] = lng;
-				position2[1] = lat;
-				marker2 = new AMap.Marker({
-				    icon:new AMap.Icon({
-						 image: iconImg,
-						 size: new AMap.Size(32, 38),  //图标所处区域大小
-						 imageSize: new AMap.Size(32, 38) //图标大小
-					}), 
-				    position: position2,
-				    anchor:'bottom-center'
-				});
-				mapTwo.setCenter(position2); 
-				mapTwo.add(marker2);
+				// if(marker2){
+				// 	mapTwo.remove(marker2);
+				// }
+				// let lng = $(this).attr("data-lng");
+				// let lat = $(this).attr("data-lat");
+				// position2[0] = lng;
+				// position2[1] = lat;
+				// marker2 = new AMap.Marker({
+				//     icon:new AMap.Icon({
+				// 		 image: iconImg,
+				// 		 size: new AMap.Size(32, 38),  //图标所处区域大小
+				// 		 imageSize: new AMap.Size(32, 38) //图标大小
+				// 	}), 
+				//     position: position2,
+				//     anchor:'bottom-center'
+				// });
+				// mapTwo.setCenter(position2); 
+				// mapTwo.add(marker2);
 			})
 		}
 		</script>
