--- a/public/themes/simpleboot3/portal/solution.html
+++ b/public/themes/simpleboot3/portal/solution.html
@@ -32,7 +32,7 @@
 		<div class="target_list">
 			<div class="item">
 				<div class="item_target_item_left">
-					<img src="__TMPL__/public/assets/style/imgs/solution/target1.png" alt="">
+					<img src="__TMPL__/public/assets/style/imgs/solution/target/1.png" alt="">
 				</div>
 			    <div class="content">
 					<div class="content_top">安心无忧全托管</div>
@@ -41,28 +41,28 @@
 			</div>
 			<div class="item">
 				<div class="item_target_item_left">
-					<img src="__TMPL__/public/assets/style/imgs/solution/target1.png" alt="">
+					<img src="__TMPL__/public/assets/style/imgs/solution/target/2.png" alt="">
 				</div>
 			    <div class="content">
-					<div class="content_top">安心无忧全托管</div>
+					<div class="content_top">业务扩张快速响应</div>
 					<div class="content_des">将企业非核心业务交给专业的外包服务商，由外包服务商提供专业的人事管理与生产制造服务，从而降低成本、提高效率、增强自身的竞争力。</div>
 				</div>
 			</div>
 			<div class="item">
 				<div class="item_target_item_left">
-					<img src="__TMPL__/public/assets/style/imgs/solution/target1.png" alt="">
+					<img src="__TMPL__/public/assets/style/imgs/solution/target/3.png" alt="">
 				</div>
 			    <div class="content">
-					<div class="content_top">安心无忧全托管</div>
+					<div class="content_top">灵活便捷</div>
 					<div class="content_des">将企业非核心业务交给专业的外包服务商，由外包服务商提供专业的人事管理与生产制造服务，从而降低成本、提高效率、增强自身的竞争力。</div>
 				</div>
 			</div>
 			<div class="item">
 				<div class="item_target_item_left">
-					<img src="__TMPL__/public/assets/style/imgs/solution/target1.png" alt="">
+					<img src="__TMPL__/public/assets/style/imgs/solution/target/4.png" alt="">
 				</div>
 			    <div class="content">
-					<div class="content_top">安心无忧全托管</div>
+					<div class="content_top">提高生产能力</div>
 					<div class="content_des">将企业非核心业务交给专业的外包服务商，由外包服务商提供专业的人事管理与生产制造服务，从而降低成本、提高效率、增强自身的竞争力。</div>
 				</div>
 			</div>
@@ -112,97 +112,100 @@
 		</div>
 	</div>
 	<!-- 我们的优势 -->
-	<div class="solution_advantage">
-		<div class="title">我们的优势</div>
-		<div class="tag">持续不断为客户提供具有价值的产品和服务</div>
-		<div class="list inner">
-			<div class="content">
-				<div class="content_left">
-					15
-				</div>
-				<div class="content_right">
-					<div class="content_right_top">
-						年
+	<div class="solution-advantage-box">
+		<div class="solution_advantage">
+			<div class="title">我们的优势</div>
+			<div class="tag">持续不断为客户提供具有价值的产品和服务</div>
+			<div class="list inner">
+				<div class="content">
+					<div class="content_left">
+						15
 					</div>
-					<div class="content_right_bottom">
+					<div class="content_right">
+						<div class="content_right_top">
+							年
+						</div>
+						<div class="content_right_bottom">
+							深耕人力资源服务业
+						</div>
+					</div>
+				</div>
+				<div class="content">
+					<div class="content_left">
+						83
+					</div>
+					<div class="content_right">
+						<div class="content_right_top">
+							家
+						</div>
+						<div class="content_right_bottom">
+							服务超千人企业和上市公司83家
+						</div>
+					</div>
+				</div>
+				<div class="content">
+					<div class="content_left">
+						3000
+					</div>
+					<div class="content_right">
+						<div class="content_right_top">
+							家
+						</div>
+						<div class="content_right_bottom">
+							服务客户3000余家
+						</div>
+					</div>
+				</div>
+				<div class="content">
+					<div class="content_left">
+						170
+					</div>
+					<div class="content_right">
+						<div class="content_right_top">
+							+
+						</div>
+						<div class="content_right_bottom">
+							全国170+家直营分/子公司
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="item_top">
+						15年
+					</div>
+					<div class="item_des">
 						深耕人力资源服务业
 					</div>
 				</div>
-			</div>
-			<div class="content">
-				<div class="content_left">
-					83
-				</div>
-				<div class="content_right">
-					<div class="content_right_top">
-						家
+				<div class="item">
+					<div class="item_top">
+						83家
 					</div>
-					<div class="content_right_bottom">
-						服务超千人企业和上市公司83家
+					<div class="item_des">
+						服务超千人企业
+						和上市公司83家
 					</div>
 				</div>
-			</div>
-			<div class="content">
-				<div class="content_left">
-					3000
-				</div>
-				<div class="content_right">
-					<div class="content_right_top">
-						家
+				<div class="item">
+					<div class="item_top">
+						3000家
 					</div>
-					<div class="content_right_bottom">
+					<div class="item_des">
 						服务客户3000余家
 					</div>
 				</div>
-			</div>
-			<div class="content">
-				<div class="content_left">
-					170
-				</div>
-				<div class="content_right">
-					<div class="content_right_top">
-						+
+				<div class="item">
+					<div class="item_top">
+						170+
 					</div>
-					<div class="content_right_bottom">
-						全国170+家直营分/子公司
+					<div class="item_des">
+						全国170+直营分/子公司
 					</div>
-				</div>
-			</div>
-			<div class="item">
-				<div class="item_top">
-					15年
-				</div>
-				<div class="item_des">
-					深耕人力资源服务业
-				</div>
-			</div>
-			<div class="item">
-				<div class="item_top">
-					83家
-				</div>
-				<div class="item_des">
-					服务超千人企业
-					和上市公司83家
-				</div>
-			</div>
-			<div class="item">
-				<div class="item_top">
-					3000家
-				</div>
-				<div class="item_des">
-					服务客户3000余家
-				</div>
-			</div>
-			<div class="item">
-				<div class="item_top">
-					170+
-				</div>
-				<div class="item_des">
-					全国170+直营分/子公司
 				</div>
 			</div>
 		</div>
 	</div>
+	
 	<!-- 解决方案 -->
 	<div class="resolve">
 		<div class="resolve_left">
@@ -211,17 +214,17 @@
 			<button>获取定制解决方案</button>
 		</div>
 		<div class="resolve_right">
-			<div class="resolve_right_item active" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
+			<div class="resolve_right_item active" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/1.png);">
 				<div class="resolve_right_content">
 					<div class="text">全流程技术支持</div>
 				</div>
 			</div>
-			<div class="resolve_right_item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
+			<div class="resolve_right_item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/2.png);">
 				<div class="resolve_right_content">
 					<div class="text">全方案咨询</div>
 				</div>
 			</div>
-			<div class="resolve_right_item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
+			<div class="resolve_right_item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/3.png);">
 				<div class="resolve_right_content">
 					<div class="text">全地域服务</div>
 				</div>
